--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="section">
     <h2>目的</h2>
     <p>
-      このページは、ポスティング実施エリアを共有し合うことで、短期間に同一エリアにポスティングすることを防ぎ、レピュテーションリスクの低下とポスティング効果の最大化を目的としています。<br><br>
+      本ページは、ポスティング実施エリアを共有し合うことで、短期間に同一エリアにポスティングすることを防ぎ、レピュテーションリスクの低下とポスティング効果の最大化を目的としています。<br><br>
       ポスティングマップの使い方動画をご確認のうえ、下記方法でマップにアクセスし、ポスティングを実施したエリアのマーキングと実施日の入力をお願いいたします。
     </p>
   </div>
@@ -36,7 +36,7 @@
 
   <div class="section">
     <h2>使い方動画</h2>
-    <p>マップの基本的な使い方（場所の追加、編集方法など）を動画で解説しています。</p>
+    <p>マップの基本的な使い方を動画で解説しています。</p>
     <div class="video-container">
       <iframe 
         width="320" 
